# CMakeQt5Example

./: CMakeLists.txt  README.md  main.cpp
